bugs fixing